# tracewise

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/tracewise/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
