[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "tracewise"
version = "0.1.0"
description = "Analyze MySQL slow query logs and rank query hotspots."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Karthik M" }
]
keywords = ["mysql", "performance", "slow-log", "cli", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Testing"
]

[project.scripts]
tracewise = "tracewise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tracewise"]

[tool.hatch.build.targets.sdist]
include = [
  "src/tracewise",
  "README.md",
  "LICENSE"
]
